# travel-planning-automation

./: README.md  pyproject.toml
src/travel_planner_pro___mallorca_family_automation/: crew.py  main.py
src/travel_planner_pro___mallorca_family_automation/config/: agents.yaml  tasks.yaml
