[project]
name = "travel_planner_pro___mallorca_family_automation"
version = "0.1.0"
description = "travel_planner_pro___mallorca_family_automation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.8.1",
]

[project.scripts]
travel_planner_pro___mallorca_family_automation = "travel_planner_pro___mallorca_family_automation.main:run"
run_crew = "travel_planner_pro___mallorca_family_automation.main:run"
train = "travel_planner_pro___mallorca_family_automation.main:train"
replay = "travel_planner_pro___mallorca_family_automation.main:replay"
test = "travel_planner_pro___mallorca_family_automation.main:test"
run_with_trigger = "travel_planner_pro___mallorca_family_automation.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
